refactor(connectors): streamline TracWikiRpc and update Trac connector
- Simplified `getAllPages` logic with `List.of()` and removed null handling in loops.
- Replaced explicit type qualifiers (e.g., `java.util`) with imports for cleaner code.
- Fixed string handling in `listProjects` and URL building methods (`append` usage).
- Added `@SuppressWarnings("unused")` annotations to plugin load/unload methods.
- Updated license headers in test and preference controller files for consistency.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>